Another program done

--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
                 <button class="button" onclick="monthDays()">Result</button><br><br>
                 <p id="monthNumR" class="outputs"></p>
             </div>
+            <!-- Marks Percentage -->
+            <div class="col-md-3">
+                <h3>Marks Percentage and Grade</h3><br>
+                Enter your Marks: <br>
+                <input type="num" placeholder="Enter your Physics Marks" id="phy" maxlength="2"><br>
+                <input type="num" placeholder="Enter your Chemisty Marks" id="chem" maxlength="2"><br>
+                <input type="num" placeholder="Enter your Biology Marks" id="bio" maxlength="2"><br>
+                <input type="num" placeholder="Enter your Mathematics Marks" id="math" maxlength="2"><br>
+                <input type="num" placeholder="Enter your Computer Marks" id="cmp" maxlength="2"><br>
+                <button class="button" onclick="perctAndGrade()">Result</button><br><br>
+                <p id="marksPerctR" class="outputs"></p>
+            </div>
         </div>
 
     </div><br><br>
